# oeuvre

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/actions/setup-uv/: action.yml
.github/workflows/: ci.yml  release.yml
oeuvre/: __init__.py  __main__.py  config.py  gui.py  mosaic_prep.py  natural_narrowband.py  pipeline.py  plate_solve.py  preprocess.py  projection.py  star_match.py  starfield.py  starnet.py
tests/: conftest.py  test_misc.py  test_mosaic_geometry.py  test_plate_solve.py  test_preprocess.py  test_projection.py  test_star_match.py  test_starnet.py
tools/: color_compare.py  launch.py  make_macos_app.sh
tools/pyinstaller-hooks/: hook-astropy.py
