[project]
name = "oeuvre"
version = "0.3.0"
description = "Automated SHO narrowband astrophotography pipeline — a night's subs to a finished image, aiming at full-sky mosaics"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "jothflee", email = "62022524+jothflee@users.noreply.github.com" }]
keywords = [
    "astrophotography", "astronomy", "narrowband", "SHO",
    "hubble-palette", "image-processing", "FITS", "stacking",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "astropy>=7.0",
    "numpy>=2.0",
    "opencv-python>=4.10",
    "pillow>=11.0",
    "scipy>=1.13",
]

[project.scripts]
oeuvre = "oeuvre.__main__:main"

[dependency-groups]
dev = ["pytest>=8.0", "autoflake>=2.3", "pyflakes>=3.4", "vulture>=2.16"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oeuvre"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "tests"]
addopts = "-q"
